gke-cloud-service-mesh/k8s/strict-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-strict-mtls
  namespace: my-namespace
spec:
  mtls:
    mode: STRICT
