gke-cloud-service-mesh/k8s/restrict-redis-access.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: restrict-redis-access
  namespace: my-namespace
spec:
  selector:
    matchLabels:
      app: redis
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/my-namespace/sa/app-sa"]
